<?xml version="1.0" encoding="UTF-8"?>
<project name="javaLauncher" default="default" basedir=".">

  <property environment="env"/>
  <property name="out.path"   value="${env.OUT_PATH}"/>
  <property name="out.name"   value="${env.OUT_NAME}"/>
  <property name="out.id"     value="${env.OUT_ID}"/>
  <property name="out.mainclass" value="${env.OUT_MAINCLASS}"/>

  <condition property="jdk11.jvm.opts"
             value="--module-path third_party/jogamp/jar/jogl-all.jar:third_party/jogamp/jar/gluegen-rt.jar --add-exports jogl.all/com.jogamp.nativewindow=jcef --add-exports jogl.all/com.jogamp.opengl.awt=jcef --add-exports jogl.all/com.jogamp.opengl=jcef --add-exports java.desktop/sun.awt=jcef --add-exports java.desktop/java.awt.peer=jcef --add-exports java.desktop/sun.lwawt.macosx=jcef --add-exports java.desktop/sun.lwawt=jcef"
             else="">
    <matches pattern="11.*" string="${java.version}"/>
  </condition>

  <taskdef name="bundleapp"
      classname="com.oracle.appbundler.AppBundlerTask"   
      classpath="third_party/appbundler/appbundler-1.0.jar" />
    
  <path id="class.path">
    <fileset dir="third_party/jogamp/jar">
      <include name="gluegen-rt.jar"/>
      <include name="gluegen-rt-natives-macosx-universal.jar"/>
      <include name="jogl-all.jar"/>
      <include name="jogl-all-natives-macosx-universal.jar"/>
    </fileset>
  </path>
    
  <target name="compile">
    <mkdir dir="${out.path}"/>
    <javac encoding="UTF8" nowarn="on" deprecation="off" debug="on" includeantruntime="false" destdir="${out.path}"
           fork="true" memoryinitialsize="32m" memorymaximumsize="128m" includeJavaRuntime="yes">
      <compilerarg line="-XDignore.symbol.file ${jdk11.jvm.opts}"/>
      <classpath refid="class.path"/>
      <src path="java/tests/"/>
      <src path="java/org/cef/"/>
      <src path="java/"/>
      <include name="**/*.java"/>
      <exclude name="module-info.java"/>
    </javac>
    <copy todir="${out.path}">
      <fileset dir="java" casesensitive="no">
        <exclude name="**/*.java" />
      </fileset>
    </copy>
  </target>
    
  <target name="jar" depends="compile">
    <mkdir dir="${out.path}"/>
    <jar destfile="${out.path}/jcef.jar" index="true" update="false">
      <fileset dir="${out.path}">
        <include name="org/cef/**"/>
        <include name="module-info.class"/>
      </fileset>
    </jar>
    <jar destfile="${out.path}/jcef-tests.jar" index="true" update="false">
      <fileset dir="${out.path}">
        <include name="tests/**"/>
      </fileset>
    </jar>
    <jar destfile="${out.path}/jcef-sources.jar" index="true" update="false">
      <fileset dir="java">
        <include name="org/cef/**"/>
      </fileset>
    </jar>
  </target>

  <target name="modular-sdk" depends="jar">
    <mkdir dir="${out.path}/modular-sdk"/>
    <mkdir dir="${out.path}/modular-sdk/make/jcef"/>
    <copy todir="${out.path}/modular-sdk/make/jcef">
      <fileset dir="modular-sdk/make/jcef" includes="**"/>
    </copy>
    <mkdir dir="${out.path}/modular-sdk/modules/jcef/org"/>
    <copy todir="${out.path}/modular-sdk/modules/jcef/org">
      <fileset dir="${out.path}/org" includes="**"/>
    </copy>
    <mkdir dir="${out.path}/modular-sdk/modules_libs/jcef"/>
    <copy todir="${out.path}/modular-sdk/modules_libs/jcef">
      <file name="${out.path}/libjcef.dylib"/>
    </copy>
    <mkdir dir="${out.path}/modular-sdk/modules_src/jcef"/>
    <copy todir="${out.path}/modular-sdk/modules_src/jcef">
      <fileset dir="java" includes="module-info.java"/>
    </copy>
  </target>
    
  <target name="bundle" depends="jar, modular-sdk">
    <mkdir dir="${out.path}"/>
    <bundleapp outputdirectory="${out.path}"
                          name="${out.name}"
                   displayname="${out.name}"
                    identifier="${out.id}"
                 mainclassname="${out.mainclass}"
                          icon="third_party/cef/res/CefIcon.icns">
      <runtime dir="${env.JAVA_HOME}"/>
      <classpath dir="${out.path}">
        <include name="jcef.jar"/>
        <include name="jcef-tests.jar"/>
      </classpath>
      <classpath dir="third_party/jogamp/jar/">
        <include name="gluegen-rt.jar"/>
        <include name="gluegen-rt-natives-macosx-universal.jar" />
        <include name="jogl-all.jar" />
        <include name="jogl-all-natives-macosx-universal.jar" />
      </classpath>
      <option value="-Djava.library.path=$APP_ROOT/Contents/Java/:$APP_ROOT/Contents/Frameworks/Chromium Embedded Framework.framework/Libraries" />
    </bundleapp>
  </target>
</project>
